--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-          ssh -v -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-35-156-121.ap-northeast-2.compute.amazonaws.com 'cd /FE_jjalseu_playground && git pull origin main && yarn install && yarn build && pm2 restart all'
+          ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-35-156-121.ap-northeast-2.compute.amazonaws.com 'cd /FE_jjalseu_playground && git pull origin main && yarn install && yarn build && pm2 restart all'
