--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,9 @@ yarn-error.log*
 
 # local env files
 .env*.local
-.env*.production
+
+# production env files
+.env.production
 
 # vercel
 .vercel
