- h1~h6 태그 본연 css 값 적용되도록 tailwind 플러그인 라이브러리 설치 및 필요한 부분 적용

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.15",
     "@toast-ui/react-editor": "^3.2.3",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.4",
