--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "next": "14.2.13",
+    "next-view-transitions": "^0.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
