--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^15.1.0",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "next": "14.2.13",
     "next-view-transitions": "^0.3.4",
