--- a/package.json
+++ b/package.json
@@ -3,31 +3,35 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/bundle-analyzer": "^15.1.0",
+    "@next/bundle-analyzer": "15.1.0",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
-    "next": "14.2.13",
+    "next": "15.1.0",
     "next-view-transitions": "^0.3.4",
-    "react": "^18",
-    "react-dom": "^18"
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@toast-ui/react-editor": "^3.2.3",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.4",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2",
     "eslint": "^8",
-    "eslint-config-next": "14.2.13",
+    "eslint-config-next": "15.1.0",
     "next-pwa": "^5.6.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.1",
+    "@types/react-dom": "19.0.2"
   }
 }
