--- a/package.json
+++ b/package.json
@@ -20,17 +20,23 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.4",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
     "@types/sanitize-html": "^2.13.0",
+    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
+    "jsdom": "^25.0.1",
     "postcss": "^8",
     "prettier": "^3.4.2",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite-tsconfig-paths": "^5.1.4",
+    "vitest": "^2.1.8"
   },
   "overrides": {
     "@types/react": "19.0.1",
