--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start",
     "lint": "next lint",
     "analyze": "ANALYZE=true yarn build",
-    "test" : "vitest"
+    "test": "vitest"
   },
   "dependencies": {
     "@next/bundle-analyzer": "15.1.0",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.1.0",
     "@types/node": "^20",
     "@types/prismjs": "^1.26.4",
