--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "analyze": "ANALYZE=true yarn build",
-    "test": "vitest"
+    "test": "vitest",
+    "prod-generate-api-type": "swagger-typescript-api -p https://api.main.thedevlounge.com/doc-json -o ./app/_shared/api -n generate.api.types.ts --extract-request-params --extract-enums",
+    "dev-generate-api-type": "swagger-typescript-api -p http://localhost:8000/doc-json -o ./app/_shared/api -n generate.api.types.ts --extract-request-params --extract-enums"
   },
   "dependencies": {
     "@next/bundle-analyzer": "15.1.0",
@@ -39,6 +41,7 @@
     "jsdom": "^25.0.1",
     "postcss": "^8",
     "prettier": "^3.4.2",
+    "swagger-typescript-api": "^13.0.23",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
     "vite-tsconfig-paths": "^5.1.4",
