--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "@next/bundle-analyzer": "15.1.0",
     "@nextui-org/card": "^2.2.9",
+    "@nextui-org/chip": "^2.2.6",
     "@nextui-org/drawer": "^2.2.7",
     "@nextui-org/react": "^2.6.11",
+    "@nextui-org/tabs": "^2.2.7",
     "@toast-ui/editor-plugin-code-syntax-highlight": "^3.1.0",
     "framer-motion": "^11.18.0",
     "next": "15.1.0",
