--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "sanitize-html": "^2.14.0"
   },
   "devDependencies": {
+    "@codemirror/lang-javascript": "^6.2.2",
     "@tailwindcss/typography": "^0.5.15",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -37,6 +38,7 @@
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.2",
     "@types/sanitize-html": "^2.13.0",
+    "@uiw/react-codemirror": "^4.23.7",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8",
     "eslint-config-next": "15.1.0",
