--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,37 @@
-name: Deploy to EC2
+#name: Deploy to EC2
+#
+#on:
+#  push:
+#    branches:
+#      - main
+#
+#jobs:
+#  deploy:
+#    runs-on: ubuntu-latest
+#
+#    steps:
+#      - name: Checkout repository
+#        uses: actions/checkout@v3
+#
+#      - name: Install SSH key
+#        run: |
+#          echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > enjoyjjalseu.pem
+#          chmod 400 enjoyjjalseu.pem
+#
+#      - name: Verify SSH key creation
+#        run: ls -l enjoyjjalseu.pem
+#
+#      - name: 환경 변수를 설정합니다.
+#        run: |
+#          echo "NEXT_PUBLIC_API_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT" >> .env
+#        env:
+#          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
+#          NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
+#
+#      - name: Deploy to EC2
+#        run: |
+#          ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-35-156-121.ap-northeast-2.compute.amazonaws.com 'cd FE_jjalseu_playground && git pull origin main && yarn install && yarn build && pm2 restart all'
+name: Build and Deploy
 
 on:
   push:
@@ -6,28 +39,41 @@ on:
       - main
 
 jobs:
-  deploy:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout Code
         uses: actions/checkout@v3
+
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Log In To Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build And Push Docker Image
+        run: |
+          docker buildx build --platform linux/amd64,linux/arm64 -t jjalseu/devlounge-front:latest -t jjalseu/devlounge-front:${{github.sha}} --push -f ./Dockerfile --target production .
 
       - name: Install SSH key
         run: |
-          echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > enjoyjjalseu.pem
-          chmod 400 enjoyjjalseu.pem
+             echo "${{ secrets.EC2_PEM_KEY }}" | tr -d '\r' > enjoyjjalseu.pem
+             chmod 400 enjoyjjalseu.pem
 
-      - name: Verify SSH key creation
-        run: ls -l enjoyjjalseu.pem
-
-      - name: 환경 변수를 설정합니다.
-        run: |
-          echo "NEXT_PUBLIC_API_ENDPOINT=$NEXT_PUBLIC_API_ENDPOINT" >> .env
-        env:
-          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
-          NEXT_PUBLIC_BASE_URL: ${{ secrets.NEXT_PUBLIC_BASE_URL }}
+            - name: Verify SSH key creation
+              run: ls -l enjoyjjalseu.pem
 
       - name: Deploy to EC2
         run: |
-          ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-3-35-156-121.ap-northeast-2.compute.amazonaws.com 'cd FE_jjalseu_playground && git pull origin main && yarn install && yarn build && pm2 restart all'
+              ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-43-203-238-138.ap-northeast-2.compute.amazonaws.com 'cd /home/ubuntu/devlounge-front-app && sudo docker pull jjalseu/devlounge-front:latest && sudo docker stop devlounge-container || true && sudo docker rm devlounge-container || true && sudo docker run --name devlounge-container -d -p 3000:3000 jjalseu/devlounge:latest'
+      - name: Deploy application
+        run: |
+          aws ssm send-command \
+          --instance-ids "i-07b3e922cca70a01c" \
+          --document-name "AWS-RunShellScript" \
+            --parameters '{"commands":["cd /home/ubuntu/devlounge-front-app","sudo docker pull jjalseu/devlounge-front:latest","sudo docker stop devlounge-container || true","sudo docker rm devlounge-container || true","sudo docker run --name devlounge-container --env-file .env -d -p 3000:3000 jjalseu/devlounge:latest"]}' \
+
