--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,4 +36,4 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-              ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-43-203-238-138.ap-northeast-2.compute.amazonaws.com 'cd /home/ubuntu/devlounge-front-app && sudo docker pull jjalseu/devlounge-front:latest && sudo docker stop devlounge-container || true && sudo docker rm devlounge-container || true && sudo docker run --name devlounge-container -d -p 3000:3000 jjalseu/devlounge:latest'
+              ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-43-203-238-138.ap-northeast-2.compute.amazonaws.com 'cd /home/ubuntu/devlounge-front-app && sudo docker pull jjalseu/devlounge-front:latest && sudo docker stop devlounge-container || true && sudo docker rm devlounge-container || true && sudo docker run --name devlounge-container -d -p 3000:3000 jjalseu/devlounge-front:latest'
