--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,9 +22,9 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build And Push Docker Image
-        run: |
-          docker buildx build --platform linux/amd64,linux/arm64 -t jjalseu/devlounge-front:latest -t jjalseu/devlounge-front:${{github.sha}} --push -f ./Dockerfile --target production .
+#      - name: Build And Push Docker Image
+#        run: |
+#          docker buildx build --platform linux/amd64,linux/arm64 -t jjalseu/devlounge-front:latest -t jjalseu/devlounge-front:${{github.sha}} --push -f ./Dockerfile --target production .
 
       - name: Install SSH key
         run: |
@@ -36,4 +36,5 @@ jobs:
 
       - name: Deploy to EC2
         run: |
-              ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-43-203-238-138.ap-northeast-2.compute.amazonaws.com 'cd /home/ubuntu/devlounge-front-app && sudo docker pull jjalseu/devlounge-front:latest && sudo docker stop devlounge-container || true && sudo docker rm devlounge-container || true && sudo docker run --name devlounge-container -d -p 3000:3000 jjalseu/devlounge-front:latest'
+              ssh -vvv -i enjoyjjalseu.pem -o StrictHostKeyChecking=no ubuntu@ec2-43-203-238-138.ap-northeast-2.compute.amazonaws.com 'cd /home/ubuntu/devlounge-front-app'
+#          'cd /home/ubuntu/devlounge-front-app && sudo docker pull jjalseu/devlounge-front:latest && sudo docker stop devlounge-container || true && sudo docker rm devlounge-container || true && sudo docker run --name devlounge-container -d -p 3000:3000 jjalseu/devlounge-front:latest'
