--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "15.1.0",
+    "@nextui-org/alert": "^2.2.9",
     "@nextui-org/card": "^2.2.9",
     "@nextui-org/chip": "^2.2.6",
     "@nextui-org/drawer": "^2.2.7",
